# mcmng

./: README.md  backup.example.service  lint.sh  pyproject.toml
.github/workflows/: lint.yml  publish.yml
mcmng/: __main__.py  backup.py
